--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-    "name": "swe-project",
-    "version": "0.1.0",
-    "private": true,
-    "workspaces": [
-        "packages/*"
-    ],
-    "scripts": {
-        "dev": "concurrently \"bun run --filter=front-end dev\" \"bun run --filter=api dev\""
-    },
-    "devDependencies": {
-        "@tailwindcss/postcss": "^4.1.14",
-        "autoprefixer": "^10.4.21",
-        "concurrently": "^9.2.1",
-        "postcss": "^8.5.6",
-        "tailwindcss": "^4.1.14"
-    },
-    "dependencies": {
-        "@mantine/core": "^8.3.4",
-        "@mantine/hooks": "^8.3.4"
-    }
+  "name": "swe-project",
+  "version": "0.1.0",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
+  "scripts": {
+    "dev": "concurrently \"bun run --filter=front-end dev\" \"bun run --filter=api dev\"",
+    "format": "prettier --write ./packages/**/*.{js,jsx,ts,tsx,json,css,md}",
+    "typecheck": "tsc -b --noEmit packages/*"
+  },
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "concurrently": "^9.2.1",
+    "prettier": "^3.6.2"
+  }
 }
