Authentication, signin page, admin page

--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^8.3.5",
     "@mantine/form": "^8.3.5",
     "@mantine/hooks": "^8.3.5",
+    "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.3"
