--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -14,6 +14,7 @@
     "@mantine/form": "^8.3.5",
     "@mantine/hooks": "^8.3.5",
     "axios": "^1.12.2",
+    "prisma": "^6.17.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.3"
