--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -19,8 +19,7 @@
     "object-to-formdata": "^4.5.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.3",
-    "react-router-dom": "^7.9.4"
+    "react-router": "^7.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
