--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,7 +15,6 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-    "@types/bcrypt": "^6.0.0",
     "@types/bun": "latest",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
@@ -27,9 +26,8 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "prisma": "^6.19.0",
     "@prisma/client": "^6.19.0",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -38,6 +36,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nanoid": "^5.1.6",
+    "prisma": "^6.19.0",
     "zod": "^4.1.13"
   }
 }
